app/assets/stylesheets/components/event_component.scss
@import "variables_mixins";

.events li {
	width: 100%;
	display: block;
}

.event {
	margin-bottom: 2rem;

	h3 {
		margin-bottom: 0.5em;
		display: inline-block;

		a {
			border-bottom-width: 0;
			text-decoration: none;
		}
	}

	&__header {
		display: grid;
		grid-template-columns: 1fr;

		@include for-tablet-portrait-up {
			grid-template-columns: 1fr auto;
			align-items: center;
		}
	}

	&__details {
		@include flexbox;
		@include flex-wrap(wrap);
		@include align-items(center);
		@include justify-content(flex-start);

		border-width: 3px 0;
		border-color: $base-rules;
		border-style: solid;
		padding: 0.5rem 0;

		@include for-tablet-portrait-up {
			padding: 0.8rem 0;
		}

		.icon {
			width: 1.75rem;
			height: 1.75rem;
			margin-right: 0.25rem;
		}
	}

	&--full {
		.event__details {
			border-top-width: 0;
			border-bottom-width: 10px;
		}
	}

	&__detail {
		@include flexbox;
		@include align-items(center);

		margin-right: 1.3rem;
		margin-bottom: 0.3rem;

		@include for-phone-only {
			@include flex(1 0 100%);
		}

		@include for-tablet-portrait-up {
			@include flex(1 1 28%);
		}

		@include for-tablet-landscape-up {
			@include flex(0 1 auto);

			margin-bottom: 0rem;
		}

		svg {
			width: 1.75rem;
			height: 1.75rem;
			margin-right: 0.25rem;
			// TODO: maybe this should be theme colour??
			color: $base-secondary;
		}
	}

	&__time,
	&__date {
		@include for-phone-only {
			@include flex(1 0 44%);
		}
	}

	&__duration {
		@include for-phone-only {
			display: none;
		}
	}

	&__location,
	&__organiser {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	&__location {
		@include for-tablet-portrait-up {
			@include flex(1 0 61%);

			margin-bottom: 0rem;
		}

		@include for-tablet-landscape-up {
			@include flex(1 1 auto);
		}
	}

	&__repeats {
		margin-bottom: 0;
	}

	&__neighbourhood {
		@include for-phone-only {
			display: none;
		}
	}

	&__fullinfo {
		h3 {
			display: block;
		}
	}
}

